data/derived/comb/progs/unify/prog2597.ml.out
Characters 208-212:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a list list * 'b list list
       but an expression was expected of type 'c list
